# discordbridgemod

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
native/: CMakeLists.txt  build.gradle  main.cpp
native/src/: main.cpp
src/main/java/dev/anderle/discordbridge/: Config.java  DiscordBridge.java  DiscordSDK.java
src/main/java/dev/anderle/discordbridge/commands/: SetupCommand.java  TestCommand.java
src/main/resources/: fabric.mod.json
